--- a/css/styles.css
+++ b/css/styles.css
@@ -228,6 +228,13 @@ body {
     margin-bottom: 72px;
 }
 
+@media only screen and (min-width: 768px) {
+    .footer-text {
+        margin-bottom: 0;
+
+    }
+}
+
 .footer {
     background-color: var(--bg-color);
     padding-top: 96px;
@@ -286,6 +293,7 @@ body {
 @media only screen and (min-width: 1158px) {
     .footer-left-side {
         margin-right: 120px;
+        margin-left: 0;
     }
 }
 
@@ -360,6 +368,7 @@ body {
 @media only screen and (min-width: 768px) {
     .form-content {
         display: flex;
+        gap: 24px;
     }
 }
 
@@ -751,11 +760,13 @@ body {
     .team-list-item {
         flex-basis: calc((100% - 24px)/2);
     }
+
+    .team-list-item:not(:last-child) {
+        margin-bottom: 0px;
+    }
 }
 
-.team-list-item:not(:last-child) {
-    margin-bottom: 0px;
-}
+
 
 @media only screen and (min-width: 1158px) {
     .team-list-item {
@@ -1009,7 +1020,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     width: 408px;
-    min-height: 576px;
+    min-height: 396px;
     background: #FCFCFC;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
