--- a/css/styles.css
+++ b/css/styles.css
@@ -96,6 +96,13 @@ body {
     gap: 40px;
 }
 
+@media only screen and (max-width: 767px) {
+    .nav-list {
+        display: none;
+
+    }
+}
+
 .header {
     border-bottom: 1px solid var(--cl-border);
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
@@ -172,6 +179,14 @@ body {
     transition: color var(--animation-speed) cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media only screen and (min-width: 768px) and (max-width: 1157px) {
+    .adres-list-item:not(:last-child) {
+        margin-bottom: 12px;
+    }
+}
+
+
+
 .contacts-link:hover,
 .contacts-link:focus {
     color: var(--active-link-color);
@@ -182,19 +197,94 @@ body {
     margin-left: auto;
 }
 
-.adres-list {
-    display: flex;
-    gap: 40px;
+@media only screen and (max-width: 767px) {
+    .adres-list {
+        display: none;
+    }
 }
 
+@media only screen and (min-width: 1158px) {
+    .adres-list {
+        display: flex;
+        gap: 40px;
+    }
+}
+
+/* header mobile-menu */
+.burger-menu {
+    color: #2E2F42;
+}
+
+.menu-toggle {
+    min-height: 40px;
+    min-width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    margin: 0;
+    padding: 0;
+    background-color: transparent;
+    cursor: pointer;
+    border: none;
+    border-radius: 50%;
+    outline: none;
+}
+
+@media (min-width: 768px) {
+    .menu-toggle {
+        display: none;
+    }
+}
+
+.menu-toggle:hover,
+.menu-toggle:focus {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+.menu-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    padding: 32px;
+    background-color: #3f51b5;
+    z-index: 999;
+
+    transform: translateX(100%);
+    transition: transform 250ms ease-in-out;
+}
+
+.menu-container.is-open {
+    transform: translateX(0);
+}
+
+.menu-container .menu-toggle {
+    position: absolute;
+    top: 16px;
+    right: 16px;
+    color: #fff;
+}
+
+.mobile-menu {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.mobile-menu .link {
+    display: block;
+    padding: 10px;
+    color: #fff;
+    text-decoration: none;
+}
 
 /* footer */
 
 .footer-container {
     display: flex;
     flex-direction: column;
-    /* display: flex;
-    align-items: baseline; */
 }
 
 @media only screen and (min-width: 768px) {
@@ -202,7 +292,6 @@ body {
         flex-direction: row;
         flex-wrap: wrap;
         gap: 72px 24px;
-
     }
 }
 
@@ -211,7 +300,6 @@ body {
         gap: 0;
         flex-wrap: nowrap;
         align-items: baseline;
-
     }
 }
 
@@ -231,7 +319,6 @@ body {
 @media only screen and (min-width: 768px) {
     .footer-text {
         margin-bottom: 0;
-
     }
 }
 
@@ -246,12 +333,10 @@ body {
     .footer {
         padding-top: 100px;
         padding-bottom: 100px;
-
     }
 }
 
 .footer-logo {
-    /* text-align: center; */
     margin-right: 0;
 }
 
@@ -300,9 +385,7 @@ body {
 @media only screen and (min-width: 1158px) {
     .social-media {
         margin-right: 80px;
-
     }
-
 }
 
 .socials-icon {
@@ -333,19 +416,13 @@ body {
     background: #31D0AA;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) and (max-width: 1157px) {
     .subscribe {
         margin-left: 108px;
-
     }
 }
 
-@media only screen and (min-width: 1158px) {
-    .subscribe {
-        margin-left: 0;
 
-    }
-}
 
 .subscribe-text {
     text-align: center;
@@ -360,7 +437,6 @@ body {
 @media only screen and (min-width: 768px) {
     .subscribe-text {
         text-align: start;
-
     }
 }
 
@@ -372,12 +448,7 @@ body {
     }
 }
 
-@media only screen and (min-width: 1158px) {
-    .form-content {
-        display: flex;
-        gap: 24px;
-    }
-}
+
 
 .subscribe-btn {
     display: flex;
@@ -415,14 +486,12 @@ body {
     max-width: 398px;
     height: 40px;
     margin-bottom: 16px;
-
 }
 
 @media only screen and (min-width: 768px) {
     .subscribe-form {
         min-width: 264px;
         margin-bottom: 0;
-
     }
 }
 
@@ -437,7 +506,6 @@ body {
     letter-spacing: 0.04em;
     color: var(--active-linc-cl-txt);
     padding-left: 56px;
-
 }
 
 .subscribe-form-tag {
@@ -474,13 +542,11 @@ body {
         font-size: 56px;
         line-height: 1.07;
         max-width: 496px;
-
     }
 }
 
 @media only screen and (min-width: 1158px) {
     .hero-headings {
-        margin-bottom: 48px;
         margin-bottom: 48px;
     }
 }
@@ -539,7 +605,6 @@ body {
         display: flex;
         justify-content: center;
         gap: 24px;
-
     }
 }
 
@@ -564,31 +629,26 @@ body {
     .about-section {
         padding-top: var(--padding-size);
         padding-bottom: var(--padding-size);
-
     }
 }
 
-.about-list {}
 
 @media only screen and (min-width: 768px) {
     .about-list {
         display: flex;
         gap: 24px;
         flex-wrap: wrap;
-
     }
 }
 
 @media only screen and (min-width: 1158px) {
     .about-list {
         flex-wrap: nowrap;
-        /* flex-basis: calc((100% - 24px * 3)/4); */
     }
 }
 
 .about-list-item:not(:last-child) {
     margin-bottom: 72px;
-
 }
 
 @media only screen and (min-width: 768px) {
@@ -597,12 +657,6 @@ body {
     }
 }
 
-@media only screen and (min-width: 1158px) {
-    .about-list-item {
-        /* flex-basis: calc((100% - 24px*3)/4); */
-
-    }
-}
 
 .about-headings {
     font-weight: 700;
@@ -613,7 +667,6 @@ body {
     letter-spacing: 0.02em;
     color: var(--second-text-color);
     margin-bottom: 8px;
-
 }
 
 @media only screen and (min-width: 768px) {
@@ -637,7 +690,6 @@ body {
     line-height: 1.5;
     letter-spacing: 0.02em;
     font-weight: 500;
-
 }
 
 @media only screen and (min-width: 1158px) {
@@ -676,7 +728,6 @@ body {
 @media only screen and (min-width: 1158px) {
     .products {
         display: block;
-
     }
 }
 
@@ -690,15 +741,12 @@ body {
     background-color: var(--bg-buttons);
     padding-top: 96px;
     padding-bottom: 96px;
-
-
 }
 
 @media only screen and (min-width: 1158px) {
     .teem {
         padding-top: var(--padding-size);
         padding-bottom: var(--padding-size);
-
     }
 }
 
@@ -749,7 +797,6 @@ body {
     background: var(--active-linc-cl-txt);
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     border-radius: 0px 0px 4px 4px;
-
 }
 
 .team-list-item:not(:last-child) {
@@ -806,14 +853,12 @@ body {
 .customers {
     padding-top: 96px;
     padding-bottom: 96px;
-
 }
 
 @media only screen and (min-width: 1158px) {
     .customers {
         padding-top: var(--padding-size);
         padding-bottom: var(--padding-size);
-
     }
 }
 
@@ -827,7 +872,6 @@ body {
     text-transform: capitalize;
     color: var(--second-text-color);
     margin-bottom: 72px;
-
 }
 
 .customers-links {
@@ -860,8 +904,6 @@ body {
     .customers-link {
         width: 168px;
         height: 88px;
-
-
     }
 }
 
@@ -1019,14 +1061,21 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 408px;
-    min-height: 396px;
+    max-width: 392px;
+    height: auto;
     background: #FCFCFC;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     padding: 24px;
     transition: transform var(--animation-speed) cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+@media only screen and (min-width: 768px) {
+    .modal {
+        max-width: 408px;
+    }
+}
+
 
 .modal-cls-btn {
     position: absolute;
