--- a/css/styles.css
+++ b/css/styles.css
@@ -108,7 +108,13 @@ body {
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
     padding-top: 24px;
     padding-bottom: 24px;
+}
 
+@media only screen and (min-width: 768px) and (max-width: 1158px) {
+    .header {
+        padding-top: 16px;
+        padding-bottom: 16px;
+    }
 }
 
 .logo-text {
@@ -149,6 +155,12 @@ body {
     transition: color var(--animation-speed) cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media only screen and (min-width: 768px) and (max-width: 1158px) {
+    .nav-link {
+        padding: 37px 0;
+    }
+}
+
 .activ-page::after {
     content: '';
     position: absolute;
@@ -177,6 +189,12 @@ body {
     letter-spacing: 0.02em;
     padding: 24px 0;
     transition: color var(--animation-speed) cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1157px) {
+    .contacts-link {
+        padding: 0;
+    }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1157px) {
@@ -212,11 +230,11 @@ body {
 
 /* header mobile-menu */
 .burger-menu {
-    color: #2E2F42;
+    stroke: #2E2F42;
 }
 
 .menu-toggle {
-    min-height: 40px;
+    /* min-height: 40px; */
     min-width: 40px;
     display: flex;
     align-items: center;
@@ -880,6 +898,14 @@ body {
     gap: 72px 16px;
 }
 
+@media only screen and (max-width: 430px) {
+    .customers-links {
+        flex-direction: column;
+        align-items: center;
+
+    }
+}
+
 @media only screen and (min-width: 768px) {
     .customers-links {
         gap: 72px 24px;
@@ -1061,13 +1087,19 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    max-width: 392px;
+    width: 392px;
     height: auto;
     background: #FCFCFC;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     padding: 24px;
     transition: transform var(--animation-speed) cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media only screen and (max-width: 400px) {
+    .modal {
+        max-width: 300px;
+    }
 }
 
 @media only screen and (min-width: 768px) {
@@ -1134,13 +1166,14 @@ body {
 
 .modal-fild {
     outline: none;
-    width: 360px;
+    width: 100%;
     height: 40px;
     padding-left: 36px;
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
     transition: border-color var(--animation-speed) cubic-bezier(0.4, 0, 0.2, 1)
 }
+
 
 .modal-comment {
     outline: none;
